fix: overlapping header and main content

--- a/style/rooms.css
+++ b/style/rooms.css
@@ -1,6 +1,6 @@
 main{
     position: relative;
-    top: 6rem;
+    top: 16rem;
     font-family: Poppins, sans-serif;
 }
 
